Sat Aug 06 04:32:56 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/xapian-check.cc: Document in --help that checking a whole
	  database performs additional cross-checks between the tables.

Sat Aug 06 04:18:25 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/xapian-check.cc: Document in --help that checking a whole
	  database performs additional cross-checks between the tables.

Sat Aug 06 04:16:38 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/xapian-check.cc: Document in --help that checking a whole
	  database performs additional cross-checks between the tables.

Sat Aug 06 04:14:51 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* docs/facets.rst: Expand descriptions for indexing and finding
	  facets to hopefully be more helpful to newcomers.
	* docs/facets.rst: Fix example calls to add_matchspy() to be passed
	  pointers, and example call to get_termfreq().

Sat Aug 06 03:14:45 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_matchspy.cc: Remove checks for remote dbtype in matchspy2
	  and matchspy4 testcases - these were checking for values which would
	  never match, and the testcases should and do work with remote
	  backends.

Fri Aug 05 15:26:07 GMT 2011  Olly Betts <olly@survex.com>

	* common/pretty.h: Add Flint-related classes to fix build with
	  --enable-log.

Fri Aug 05 15:21:26 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/database.h: Improve the documentation comment for
	  Database::close().  (ticket#504)

Fri Aug 05 11:49:17 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* common/pretty.h: Don't dereference a NULL pointer.
	* common/output.h,common/pretty.h: Fix invalid templates in pretty.h.
	* common/pretty.h: Fix template for pretty printing a std::list.

Fri Aug 05 11:36:10 GMT 2011  Olly Betts <olly@survex.com>
